títulos e estilizacao dos mesmos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div id="app">
+        <section class="title">
+            <h1>Rick And Morty WIKI</h1>
+            <h3>using api &#x1F609</h3>
+        </section>
         <div id="form">
             <input type="text" v-model="name">
             <button v-on:click="search" >Search</button>
