títulos e estilizacao dos mesmos 1.1

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <div id="app">
         <section class="title">
-            <h1>Rick And Morty WIKI</h1>
-            <h3>using api &#x1F609</h3>
+            <h1 class="title">Rick And Morty WIKI</h1>
+            <h3 class="subtitle">Using API's  &#x1F609</h3>
         </section>
         <div id="form">
             <input type="text" v-model="name">
