Estilização do index completo

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <h3 class="subtitle">Using API's  &#x1F609</h3>
         </section>
         <div id="form">
-            <input type="text" v-model="name" placeholder="Search for a character">
-            <button v-on:click="search" >Search</button>
+            <input class="inputSearch" type="text" v-model="name" placeholder="Search for a character">
+            <button class="buttonSearch" v-on:click="search" >Search</button>
         </div>
         <!-- <ul>
             <li class="name" v-for="personagem in personagens">
